# poc-aggregate-repo

./: main.py  pyproject.toml
domain/: adapter.py  repository.py
domain/entities/: base.py
tests/: test_get_all_clusters.py
tests/data/: Transactions.xlsx  clusters.xlsx
