[tool.poetry]
name = "pocaggregaterepo"
version = "0.1.0"
description = ""
authors = ["mamdzlaki <mamdzlaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openpyxl = "^3.1.2"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

